web audio edits

--- a/links.html
+++ b/links.html
@@ -168,6 +168,9 @@
             <h3>CSS</h3>
             <ul>
                 <li>
+                     <a href="http://easings.net/">Easing Functions Cheat Sheet</a>
+                </li>
+                <li>
                      <a href="http://css3.bradshawenterprises.com/transitions/">Intro to CSS Transitions</a>. A simple tutorial
                 </li>
                 <li>
