--- a/web-audio/simple-demo/test.html
+++ b/web-audio/simple-demo/test.html
@@ -79,7 +79,12 @@ var timer = document.getElementById('current-time');
 window.audio = new Audio();
 audio.src = 'test.ogg';
 
+
+
 //wanna make this work
+//1
+//audio.src ="http://brendansheehanworks.com/100/aaaa/examples/b/roto5.wav";
+//2
 //audio.src = 'http://api.soundcloud.com/tracks/6981096/stream?client_id=a6fd3417a125ba57cf66016a1b324af4';
 //good resources here http://www.zya.cc/web-audio
 
@@ -121,10 +126,22 @@ function rafCallback(time) {
 
     var magnitude = freqByteData[OFFSET];
 
-    
+    var red = (2 * magnitude) % 255;
+    var green = (magnitude) % 255;
+    var blue = (3 * magnitude) % 255;
+
+    function complementary(color){
+      return 255 - color;
+    }
+
+    function darken(color, percentage){
+      var normalize = Math.abs(percentage % 100);
+      return normalize / (color * 100);
+    }
 
     //console.log(magnitude);
-    bar.style.background = "rgba(" + (2 * magnitude) % 255 + ", " + (magnitude) % 255 + ", " + (3 * magnitude) % 255 + ", 1)";
+    document.querySelector('body').style.background = "rgba(" + complementary(red) + ", " + complementary(green) + ", " + complementary(blue) + ", 1)";
+    bar.style.background = "rgba(" + red + ", " + green + ", " + blue + ", 1)";
     bar.style.height = (4 * magnitude) + "px";
     bar.style.width = (4 * magnitude) + "px";
     bar.style.top = ((window.innerHeight / 2) - (parseInt(bar.style.height.split("p")[0]) / 2 )) + "px";
@@ -132,7 +149,7 @@ function rafCallback(time) {
 
 
 
-    timer.style.color = "rgba(" + (2 * magnitude) % 255 + ", " + (magnitude) % 255 + ", " + (3 * magnitude) % 255 + ", 1)";
+    timer.style.color = "rgba(" + red + ", " + green + ", " + blue + ", 1)";
 
   //bar.style.background = "rgba(" + 0 + ", " + 255 + ", " + 0 + ", 1)";
   console.log(bar.style.background);
