--- a/web-audio/volume-scroll/index.html
+++ b/web-audio/volume-scroll/index.html
@@ -24,9 +24,9 @@
     }
     #volume-value{
       position:fixed;
-      top:20px;
-      left:20px;
-      font-size: 45px;
+      top:0.2em;
+      left:0.4em;
+      font-size: 10em;
     }
   </style>
   <script>
