couple of minor edits to syllabus

--- a/assignment-2.html
+++ b/assignment-2.html
@@ -48,8 +48,7 @@
 
             <p>
                 <ol>
-                <li>Complete <a href="http://www.codecademy.com/en/tracks/javascript">Code Academy Javascript</a> until arrays section</li>
-                <li>Design and implement simple Storm class page</li>
+                <li>Design and implement a simple Storm class page</li>
                 <li>Complete <a href="https://try.github.io">try.github.io tutorial</a></li>
                 <li>Deploy Github.io class page</li>
                 </ol>
