couple of minor edits to syllabus

--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -235,7 +235,7 @@
 
 			<h3>Assignments</h3>
 			<ol>
-				<li>Code Academy HTML & CSS</li>
+				<li>Create a website explaining what you already know about HTML, CSS and Javascript, and what you would like to learn in this class. Make sure you use all your skills. Upload your results to your Storm server.</li>
 			</ol>
 
 			<h3>Readings</h3>
@@ -269,7 +269,6 @@
 
 			<h3>Assignments</h3>
 			<ol>
-				<li>Complete <a href="http://www.codecademy.com/en/tracks/javascript">Code Academy Javascript</a> until arrays section</li>
 				<li>Design and implement simple Storm class page</li>
 				<li>Complete <a href="https://try.github.io">try.github.io tutorial</a></li>
 				<li>Deploy Github.io class page</li>
