--- a/threejs-examples/index.html
+++ b/threejs-examples/index.html
@@ -5,9 +5,8 @@
 	<title>three.js box</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-	<script src="js/lib/three.min.js"></script>
+	<script src="js/lib/three-old.min.js"></script>
 	<script src="js/lib/stats.js"></script>
-	<script src="js/main.js"></script>
 	
 	
 	<style>
